--- a/requirements.txt
+++ b/requirements.txt
@@ -1,40 +1,36 @@
 asgiref==3.8.1
 attrs==23.2.0
-certifi==2024.6.2
-charset-normalizer==3.3.2
-colorama==0.4.6
-coloredlogs==15.0.1
-Django==5.0.6
-flatbuffers==24.3.25
-humanfriendly==10.0
+autobahn==23.6.2
+Automat==22.10.0
+cffi==1.16.0
+channels==3.0.4
+channels-redis==4.2.0
+constantly==23.10.4
+cryptography==42.0.8
+daphne==3.0.2
+distlib==0.3.8
+Django==5.0.4
+djangorestframework==3.15.2
+filelock==3.14.0
+hyperlink==21.0.0
 idna==3.7
-imageio==2.34.1
-jsonschema==4.22.0
-jsonschema-specifications==2023.12.1
-lazy_loader==0.4
-llvmlite==0.42.0
-mpmath==1.3.0
-networkx==3.3
-numba==0.59.1
-numpy==1.26.4
-onnxruntime==1.18.0
-opencv-python-headless==4.10.0.82
-packaging==24.0
+incremental==22.10.0
+msgpack==1.0.8
 pillow==10.3.0
-platformdirs==4.2.2
-pooch==1.8.1
-protobuf==5.27.0
-PyMatting==1.1.12
-pyreadline3==3.4.1
-referencing==0.35.1
-rembg==2.0.57
-requests==2.32.3
-rpds-py==0.18.1
-scikit-image==0.23.2
-scipy==1.13.1
+platformdirs==4.2.1
+pyasn1==0.6.0
+pyasn1_modules==0.4.0
+pycparser==2.22
+pyOpenSSL==24.1.0
+redis==5.0.6
+service-identity==24.1.0
+setuptools==70.1.0
+six==1.16.0
 sqlparse==0.5.0
-sympy==1.12.1
-tifffile==2024.5.22
-tqdm==4.66.4
+Twisted==24.3.0
+twisted-iocpsupport==1.0.4
+txaio==23.1.1
+typing_extensions==4.12.2
 tzdata==2024.1
-urllib3==2.2.1
+virtualenv==20.26.1
+zope.interface==6.4.post2
